<resources>
    <string name="app_name">Starball</string>
    <string name="FACEBOOK_APP_ID">630512880727589</string>
    <string name="ACCOUNT_KIT_CLIENT_TOKEN">60f8fdb472860e21556f0f0261ebf128</string>
    <string name="ADMOB_APP_ID">ca-app-pub-5255137978301486~7156522176</string>
    <string name="ADMOB_UNIT_ID_REAL">ca-app-pub-5255137978301486/8650223780</string>
    <string name="ADMOB_UNIT_ID">ca-app-pub-3940256099942544/1033173712</string>
    <string name="cash">Cash 요청</string>
    <string name="starball">보유 Starball :</string>
    <string name="cash_starball">Cash 가능 Starball 갯수:</string>
    <string name="cash_content">무료지급된 Starball은 Cash 대상에서 제외됩니다.</string>
    <string name="starball_history">보유내역</string>
    <string name="cash_request_amount">Cash 요청 Starball 갯수</string>
    <string name="ex_input">입력해주세요</string>
    <string name="prediction_cash">예상 Cash</string>
    <string name="cash_content2">앱스토어 결제비용과 시스템비용을 공제한 금액이 송금됩니다. 페이팔 송금수수료 약 3&#37; 공제 됩니다.</string>
    <string name="cash_content3">환율에 따라 금액은 최종 달라질 수 있습니다. 요청일 기준 2~3일 소요될 수 있습니다.</string>
    <string name="cash_content4">페이팔 연동 e-mail을 적어 주세요.</string>
    <string name="deposit_request">입금요청 e-mail :</string>
    <string name="charmpoint_content">최대 4개를 선택해주세요.</string>
    <string name="charmpoint_title">나의 매력포인트는</string>
    <string name="next">다음</string>
    <string name="timeline">TimeLine</string>
    <string name="friend_invite">친구초대</string>
    <string name="edit_profile_content">동영상 또는 사진을 삭제하거나 끌여당겨 수순을 조정하세요</string>
    <string name="edit_profile_title">프로필수정</string>
    <string name="aboutme">자기 소개</string>
    <string name="won">원</string>
    <string name="certification">인증</string>
    <string name="unauthorized">미인증</string>
    <string name="complete">완료</string>
    <string name="Incomplete">미완료</string>
    <string name="language">언어</string>
    <string name="Korean">한국어</string>
    <string name="english">영어(초급)</string>
    <string name="Thai">태국어(중급)</string>
    <string name="add_language">언어 추가</string>
    <string name="Nationality">국적</string>
    <string name="my_attractive_point_is">나의 매력포인트는</string>
    <string name="If_we_meet">우리가 만난다면,</string>
    <string name="meet_some_one">만나고 싶은 사람은</string>
    <string name="character_info">Character info.</string>
    <string name="height">키는</string>
    <string name="religion">종교</string>
    <string name="politician">정치관</string>
    <string name="children">자녀</string>
    <string name="animal">반려동물</string>
    <string name="smoking">흡연</string>
    <string name="Drinking">음주</string>
    <string name="Exercise">운동</string>
    <string name="Recent_workouts">최근하는 운동</string>
    <string name="income">수입</string>
    <string name="Account_authentication_settings">계정 인증 설정</string>
    <string name="Phone_verification">전화 번호 인증</string>
    <string name="safety_certi">안전 인증</string>
    <string name="no_certi">인증되지 않았습니다.</string>
    <string name="edit_profile_content2">계정인증이 다 완료되지 않을 경우, 만약의 사태에 저희가 회원님을 보호 및 조치 할 수 없을 수 있습니다. 회원님의 안전을 위해 계정 인증을
        진행해 주세요 또한, 미 인증시 Starball을 Cash화가 불가 할 수도 있습니다.
    </string>
    <string name="connected_account">연결된 계정</string>
    <string name="email_acount">이메일 인증</string>
    <string name="facebook_conect">Facebook 연결</string>
    <string name="instagram_connect">instagram 연결</string>
    <string name="nomal">정상</string>
    <string name="ghost">유령모드</string>
    <string name="edit_profile_content3">유령모드일 경우 검색에 나타나지 않습니다. 또한 가상으로 탈퇴된 것으로 처리 됩니다.</string>
    <string name="cross_filter">크로스 필터링</string>
    <string name="edit_profile_content4">(나랑 동일한 검색조건을 한 사람에게만 노출됩니다.)</string>
    <string name="limit_see_me">나를 보는 회원을 제한합니다.</string>
    <string name="limit_see_me2">(내가 호감보낸 회원만 볼 수 있습니다.)</string>
    <string name="vvip_see">VVIP 회원에게만 보입니다.</string>
    <string name="vvip_see2">(1&#37;의 최상 Premium 회원에게만 보입니다.)</string>
    <string name="unknown_diss">아는 사람에게 노출되지 않습니다.</string>
    <string name="unknown_diss2">(전화번호에 등록된 사람은 서로 노출 되지 않습니다.)</string>
    <string name="travel_is">여행을 간다면,</string>
    <string name="travel_is2">가는 나라를 알려 주세요.</string>
    <string name="calendar_talk">일정을 알려 주세요</string>
    <string name="check">확인</string>
    <string name="e_mail_connct_title">내 e-mail 계정 연결하기</string>
    <string name="email_input">연결할 e-mail를 입력하세요</string>
    <string name="check_email">확인 메일 보내기</string>
    <string name="email_content">회원님의 정보는 인증 목적으로만 사용됩니다. 저희는 이 정보를 그 누구와도 공유하지 않습니다.</string>
    <string name="commercial">상용어구</string>
    <string name="emoticon">이모티콘</string>
    <string name="input_commercial">상용어구를 등록하세요</string>
    <string name="participants">참여자</string>
    <string name="make_group_title">그룹 만들기</string>
    <string name="input_group_make">이름으로 검색</string>
    <string name="groupmake_content">그룹으로 동시발송하실 분을 선택해 주세요 단, 기본회원은 그룹 당 3명까지 가능합니다.(유료회원은 무제한)</string>
    <string name="birthday_title">당신의 생년월일은,</string>
    <string name="year">년</string>
    <string name="month">월</string>
    <string name="day">일</string>
    <string name="expression_title">당신을 표현 하자면,</string>
    <string name="skip">건너뛰기</string>
    <string name="gender_title">당신의 성별은,</string>
    <string name="men">남자</string>
    <string name="famale">여자</string>
    <string name="height_title">당신의 키는,</string>
    <string name="job_title">당신의 직업은,</string>
    <string name="language_title">당신의 대화가능 언어는,</string>
    <string name="name_title">당신의 이름은,</string>
    <string name="name_display">아래와 같이 표시 됩니다.</string>
    <string name="phone_confirm_title">번호를 입력하세요</string>
    <string name="phone_confirm_content">인증번호를 받지 못하셨나요? 받지 못하셨다면, 번호를 다시 확인하신 후</string>
    <string name="push_link">이 링크를 눌러 주세요</string>
    <string name="phone_certi_no_share">회원님의 정보는 인증 목적으로만 사용됩니다. 저희는 이 정보를 그 누구와도 공유하지 않습니다.</string>
    <string name="picture_content"><![CDATA[<b>인물 외 사진</b>은 <b>자동 삭제</b>됩니다.<br/>세로화면에 최적화 되어 있습니다.<br/><b>최소 3장</b>의 동영상 또는 사진을 등록해 주세요.<br/><b>동영상을 추천합니다.</b>]]></string>
    <string name="picture_min3">최소 3장의 동영상 또는 사진을 등록해 주세요.</string>
    <string name="pwd_title">당신의 비밀번호는,</string>
    <string name="pwd_content">6자리에서~12자리로 \n최소 영문자 1개와 숫자1개를 포함하여야 합니다.</string>
    <string name="pwd_confirm">올바른 비밀번호 입니다.</string>
    <string name="final_join_title">%1$s님.\n축하 드립니다.</string>
    <string name="join_result">Starball에 가입이 완료되었습니다.</string>
    <string name="join_result_content"><![CDATA[이제 회원님에게 한국과 글로벌의<br/>매력적인 친구들을 소개해 드릴께요.<br/>이 공간은 문화와 생각과 사람들이 연결되는<br/><b>최상의 소셜 네트워크 입니다.</b>]]></string>
    <string name="join_result_manner"><![CDATA[<b>%1$s님.</b><br/>매너있게 행동해 주세요]]></string>
    <string name="join_result_ex">Starball은 가지고만 있어도 모든 소원을 들어준다는 신화 속 구슬입니다.</string>
    <string name="starball_join_result"><![CDATA[Starball이\n드리는 소중한 가치는,]]></string>
    <string name="result_lesson"><![CDATA[회원님 존재에 대한 <b><font color="#923b9f">존중</font></b>,<br/>만나게 될 친구들에 대한 <b><font color="#923b9f">배려</font></b>,<br/>회원님 미래를 위한 <b><font color="#923b9f">환원</font></b> 입니다.]]></string>
    <string name="school_title">당신의 최종학교는,</string>
    <string name="shape_title">당신의 모습은,</string>
    <string name="shape_content"><![CDATA[동영상 갯수와 사진 퀄리티에 따라 <b>상대 소개 등급이 달라집니다.</b>]]></string>
    <string name="shape_remember">기억하세요.</string>
    <string name="join_title">회원가입</string>
    <string name="if_not">없다면,</string>
    <string name="join">회원가입</string>
    <string name="log_in">기존회원이시면 Log-in</string>
    <string name="group_send">그룹발송</string>
    <string name="talk">대화</string>
    <string name="search">Search</string>
    <string name="recive_starball">받은 Starball</string>
    <string name="match">매치</string>
    <string name="recive_crush">받은 호감</string>
    <string name="send_crush">보낸 호감</string>
    <string name="everyday_happiness">일상의 행복</string>
    <string name="moment_trust">진실의 순간</string>
    <string name="rediscovery">존재의 재발견</string>
    <string name="Opportunity_bond">인연의 기회</string>
    <string name="iam">나는</string>
    <string name="we_meet">우리가 만난다면</string>
    <string name="want_people">내가 원하는 사람은</string>
    <string name="starball_pay_content">Starball은 친구에게 선물 및 프로포즈, 포토 열람등 다양한 역할을 합니다. 또한, 구매한 Starball은 Cash화가 가능합니다.
    </string>
    <string name="starball_pay_title">Starball 구입</string>
    <string name="starball_free">무료로 Starball 받기</string>
    <string name="adver_see">광고시청</string>
    <string name="pay">구매하기</string>
    <string name="money">원</string>
    <string name="phone_certi_title">내 Phone 인증하기</string>
    <string name="phone_certi_content">인증할 핸드폰 번호를 입력하세요</string>
    <string name="phone_certi_input">번호를 입력하세요</string>
    <string name="phone_certi_content2">회원님의 정보는 인증 목적으로만 사용됩니다. 저희는 이 정보를 그 누구와도 공유하지 않습니다.</string>
    <string name="sliding_display">좌우로 화면을 쓸어주세요</string>
    <string name="profile_preview">Profile 미리보기</string>
    <string name="report_title">신고하기</string>
    <string name="report_content">신고를 원하시나요?</string>
    <string name="precautions">주의사항</string>
    <string name="report_content2">회원님의 정보 및 자세한 신고내용은 공개되지 않습니다. 신고내용에 대해 반드시 조치를 취한다는 보장은 하지 않습니다. 타 서비스상에서 발생한 피해신고는
        접수되지 않습니다.
    </string>
    <string name="report_content3">허위 혹은 보복성 신고, 동일 회원을 여러번 신고하실 경우 신고 내 용에 대한 신뢰성이 떨어질 수 있습니다.</string>
    <string name="report_content4">회원님이 일상생활에서 피해를 볼 가능성이 있는 경우, 실제로 피해 를 본 경우, 범죄의 근거가 되는 정보를 가진 경우에는 즉시 경찰과 상담하시기
        바랍니다.
    </string>
    <string name="proof_photograph">증빙 사진 첨부</string>
    <string name="safe_join_title">안전인증 가입</string>
    <string name="safe_join_content">안전 인증에 가입하시겠습니까?</string>
    <string name="safe_join_content2">안전 인증제도란, 불성실한 회원 (변태, working girl, 언어폭력 기타) 을 가려내기 위하여 도입된 제도로써, 공탁금을 걸고 회원활동을
        하는 것을 말합니다. 정상적인 활동을 할 경우 공탁금이 없어지지 아니하며, 탈퇴나 휴면계정전환시 관리비를 제한 금액 전액 환불됩니다. 만약 불성실한 사유 적발, 및 누적으로 신고될 경우 해당 공탁금은
        돌려받 을 수 없습니다. 상대회원에게 안전함을 증명하시고, 인기도를 대폭 올려 보세요.
    </string>
    <string name="safe_join_no">아니오. 괜찮습니다.</string>
    <string name="safe_join_yes">예. 좋아요</string>
    <string name="safe_join_content3">* 관리비: 시스템 운영비10&#37;+ 앱스토어 인앱결제수수료 30&#37;</string>
    <string name="safe_join_confirm_title">안전인증 확인</string>
    <string name="safe_join_confirm_content">안전 인증에 가입되어 있습니다.</string>
    <string name="charm_point_voice">목소리가 좋아요</string>
    <string name="charm_point_playful">장난기가 많아요</string>
    <string name="charm_point_bigeye">큰눈이 매력적이에요.</string>
    <string name="charm_point_sexyduke">섹시한 두뇌</string>
    <string name="charm_point_game">게임을 잘해요</string>
    <string name="charm_point_leg">다리가 예뻐요</string>
    <string name="charm_point_turf">털털해요</string>
    <string name="charm_point_hip">엉덩이가 예뻐요</string>
    <string name="charm_point_bluff">허세가 없어요</string>
    <string name="charm_point_eye">쌍커풀 없는 눈</string>
    <string name="charm_point_story">이야기를 잘 들어줘요</string>
    <string name="charm_point_figure">몸매비율이 좋아요</string>
    <string name="charm_point_history">시사에 밝아요</string>
    <string name="charm_point_cuty">애교가 많아요</string>
    <string name="charm_point_smile">웃는게 예뻐요</string>
    <string name="charm_point_work">워커홀릭</string>
    <string name="charm_point_sing">노래를 잘해요</string>
    <string name="charm_point_hand">손이 예뻐요</string>
    <string name="charm_point_only">한사람만 봐요</string>
    <string name="charm_point_solo">혼자 잘 놀아요</string>
    <string name="charm_point_dimple">보조개</string>
    <string name="charm_point_frank">솔직해요</string>
    <string name="charm_point_manner">배려심이 깊어요</string>
    <string name="charm_point_smilemany">웃음이 많아요</string>
    <string name="charm_point_helth">체력이 좋아요</string>
    <string name="charm_point_manner2">예의가 발라요</string>
    <string name="charm_point_comic">유머감각</string>
    <string name="charm_point_cook">요리를 잘해요</string>
    <string name="charm_point_nose">오똑한 콧날</string>
</resources>