<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
    >
    <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="50dp">

        <ImageView
                android:paddingLeft="9.5dp"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:src="@mipmap/comm_arrow_left"
                android:id="@+id/backIV"/>

        <TextView
                android:textStyle="bold"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:textSize="21dp"
                android:textColor="#333333"
                android:layout_centerInParent="true"
                android:text="@string/charmpoint_title"/>

    </RelativeLayout>



    <ScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:fillViewport="true">
    <LinearLayout
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:layout_height="match_parent">

        <TextView
                android:textStyle="bold"
                android:layout_marginTop="15dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="15dp"
                android:textColor="#333333"
                android:text="@string/charmpoint_content"
        />


        <LinearLayout
                android:layout_marginTop="35dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
            <TextView
                    android:layout_marginRight="10dp"
                    android:padding="5dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="11dp"
                    android:background="@drawable/background_border_strock4_d4d4d4"
                    android:textColor="#555555"
                    android:text="@string/charm_point_voice"/>
            <TextView
                    android:layout_marginRight="10dp"
                    android:padding="5dp"
                    android:background="@drawable/background_border_strock4_d4d4d4"
                    android:textColor="#555555"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="11dp"
                    android:text="@string/charm_point_playful"/>
            <TextView
                    android:layout_marginRight="10dp"
                    android:padding="5dp"
                    android:background="@drawable/background_border_strock4_923b9f"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="11dp"
                    android:textColor="#ffffff"
                    android:text="@string/charm_point_bigeye"/>
            <TextView
                    android:layout_marginRight="10dp"
                    android:padding="5dp"
                    android:background="@drawable/background_border_strock4_923b9f"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="11dp"
                    android:textColor="#ffffff"
                    android:text="@string/charm_point_sexyduke"/>


        </LinearLayout>
        <LinearLayout
                android:layout_marginTop="15dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
            <TextView
                    android:layout_marginRight="10dp"
                    android:padding="5dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="11dp"
                    android:background="@drawable/background_border_strock4_d4d4d4"
                    android:textColor="#555555"
                    android:text="@string/charm_point_game"/>
            <TextView
                    android:layout_marginRight="10dp"
                    android:padding="5dp"
                    android:background="@drawable/background_border_strock4_d4d4d4"
                    android:textColor="#555555"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="11dp"
                    android:text="@string/charm_point_leg"/>
            <TextView
                    android:layout_marginRight="10dp"
                    android:padding="5dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="11dp"
                    android:background="@drawable/background_border_strock4_d4d4d4"
                    android:textColor="#555555"
                    android:text="@string/charm_point_turf"/>
            <TextView
                    android:layout_marginRight="10dp"
                    android:padding="5dp"
                    android:background="@drawable/background_border_strock4_d4d4d4"
                    android:textColor="#555555"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="11dp"
                    android:text="@string/charm_point_hip"/>


        </LinearLayout>
        <LinearLayout
                android:layout_marginTop="15dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
            <TextView
                    android:layout_marginRight="10dp"
                    android:padding="5dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="11dp"
                    android:background="@drawable/background_border_strock4_d4d4d4"
                    android:textColor="#555555"
                    android:text="@string/charm_point_bluff"/>
            <TextView
                    android:layout_marginRight="10dp"
                    android:padding="5dp"
                    android:background="@drawable/background_border_strock4_d4d4d4"
                    android:textColor="#555555"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="11dp"
                    android:text="@string/charm_point_eye"/>
            <TextView
                    android:layout_marginRight="10dp"
                    android:padding="5dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="11dp"
                    android:background="@drawable/background_border_strock4_d4d4d4"
                    android:textColor="#555555"
                    android:text="@string/charm_point_bluff"/>



        </LinearLayout>
        <LinearLayout
                android:layout_marginTop="15dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
            <TextView
                    android:layout_marginRight="10dp"
                    android:padding="5dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="11dp"
                    android:background="@drawable/background_border_strock4_d4d4d4"
                    android:textColor="#555555"
                    android:text="@string/charm_point_story"/>
            <TextView
                    android:layout_marginRight="10dp"
                    android:padding="5dp"
                    android:background="@drawable/background_border_strock4_d4d4d4"
                    android:textColor="#555555"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="11dp"
                    android:text="@string/charm_point_figure"/>



        </LinearLayout>
        <LinearLayout
                android:layout_marginTop="15dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
            <TextView
                    android:layout_marginRight="10dp"
                    android:padding="5dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="11dp"
                    android:background="@drawable/background_border_strock4_d4d4d4"
                    android:textColor="#555555"
                    android:text="@string/charm_point_history"/>
            <TextView
                    android:layout_marginRight="10dp"
                    android:padding="5dp"
                    android:background="@drawable/background_border_strock4_d4d4d4"
                    android:textColor="#555555"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="11dp"
                    android:text="@string/charm_point_cuty"/>
            <TextView
                    android:layout_marginRight="10dp"
                    android:padding="5dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="11dp"
                    android:background="@drawable/background_border_strock4_d4d4d4"
                    android:textColor="#555555"
                    android:text="@string/charm_point_smile"/>



        </LinearLayout>
        <LinearLayout
                android:layout_marginTop="15dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            <TextView
                    android:layout_marginRight="10dp"
                    android:padding="5dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="11dp"
                    android:background="@drawable/background_border_strock4_d4d4d4"
                    android:textColor="#555555"
                    android:text="@string/charm_point_work"/>
            <TextView
                    android:layout_marginRight="10dp"
                    android:padding="5dp"
                    android:background="@drawable/background_border_strock4_d4d4d4"
                    android:textColor="#555555"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="11dp"
                    android:text="@string/charm_point_sing"/>
            <TextView
                    android:layout_marginRight="10dp"
                    android:padding="5dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="11dp"
                    android:background="@drawable/background_border_strock4_d4d4d4"
                    android:textColor="#555555"
                    android:text="@string/charm_point_hand"/>


        </LinearLayout>
        <LinearLayout
                android:layout_marginTop="15dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
            <TextView
                    android:layout_marginRight="10dp"
                    android:padding="5dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="11dp"
                    android:background="@drawable/background_border_strock4_d4d4d4"
                    android:textColor="#555555"
                    android:text="@string/charm_point_only"/>
            <TextView
                    android:layout_marginRight="10dp"
                    android:padding="5dp"
                    android:background="@drawable/background_border_strock4_d4d4d4"
                    android:textColor="#555555"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="11dp"
                    android:text="@string/charm_point_solo"/>
            <TextView
                    android:layout_marginRight="10dp"
                    android:padding="5dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="11dp"
                    android:background="@drawable/background_border_strock4_d4d4d4"
                    android:textColor="#555555"
                    android:text="@string/charm_point_dimple"/>


        </LinearLayout>
        <LinearLayout
                android:layout_marginTop="15dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
            <TextView
                    android:layout_marginRight="10dp"
                    android:padding="5dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="11dp"
                    android:background="@drawable/background_border_strock4_d4d4d4"
                    android:textColor="#555555"
                    android:text="@string/charm_point_frank"/>
            <TextView
                    android:layout_marginRight="10dp"
                    android:padding="5dp"
                    android:background="@drawable/background_border_strock4_d4d4d4"
                    android:textColor="#555555"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="11dp"
                    android:text="@string/charm_point_eye"/>
            <TextView
                    android:layout_marginRight="10dp"
                    android:padding="5dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="11dp"
                    android:background="@drawable/background_border_strock4_d4d4d4"
                    android:textColor="#555555"
                    android:text="@string/charm_point_manner"/>


        </LinearLayout>
        <LinearLayout
                android:layout_marginTop="15dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
            <TextView
                    android:layout_marginRight="10dp"
                    android:padding="5dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="11dp"
                    android:background="@drawable/background_border_strock4_d4d4d4"
                    android:textColor="#555555"
                    android:text="@string/charm_point_smilemany"/>
            <TextView
                    android:layout_marginRight="10dp"
                    android:padding="5dp"
                    android:background="@drawable/background_border_strock4_d4d4d4"
                    android:textColor="#555555"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="11dp"
                    android:text="@string/charm_point_helth"/>
            <TextView
                    android:layout_marginRight="10dp"
                    android:padding="5dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="11dp"
                    android:background="@drawable/background_border_strock4_d4d4d4"
                    android:textColor="#555555"
                    android:text="@string/charm_point_manner2"/>



        </LinearLayout>
        <LinearLayout
                android:layout_marginTop="15dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
            <TextView
                    android:layout_marginRight="10dp"
                    android:padding="5dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="11dp"
                    android:background="@drawable/background_border_strock4_d4d4d4"
                    android:textColor="#555555"
                    android:text="@string/charm_point_comic"/>
            <TextView
                    android:layout_marginRight="10dp"
                    android:padding="5dp"
                    android:background="@drawable/background_border_strock4_d4d4d4"
                    android:textColor="#555555"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="11dp"
                    android:text="@string/charm_point_cook"/>
            <TextView
                    android:layout_marginRight="10dp"
                    android:padding="5dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="11dp"
                    android:background="@drawable/background_border_strock4_d4d4d4"
                    android:textColor="#555555"
                    android:text="@string/charm_point_nose"/>

        </LinearLayout>

        <TextView
                android:layout_marginTop="31.5dp"
                android:id="@+id/nextTV"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginBottom="10dp"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="#000000"
                android:text="@string/next"
                android:textStyle="bold"
                android:gravity="center"
                android:textSize="20.5dp"
                android:textColor="#ffffff"/>

    </LinearLayout>










    </ScrollView>

</LinearLayout>